# multi-agent

./: .env.example  config.py  main.py  pyproject.toml
agents/: amm_agent.py  data_explorer_agent.py  kpi_agent.py  supervisor.py  supervisor.py.bak
agents/supervisor/: __init__.py  graph.py  state.py  streaming.py
agents/supervisor/nodes/: planner.py  sub_agent.py  summarise.py  supervisor_node.py
db/: conversation.py  docs.py
models/: schemas.py
prompts/: agents.py  supervisor.py
routers/: confluence.py
tools/: agent_tools.py  db_tools.py  rag_tools.py
