[project]
name = "ic-agent"
version = "0.1.0"
description = "Multi-agent chat application — Supervisor + KPI/DataExplorer/AMM sub-agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangChain / LangGraph core
    "langchain-core>=0.3",
    "langchain-google-vertexai>=2.0",
    "langgraph>=0.2",
    # Postgres checkpointer (requires psycopg v3)
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    # Raw DB access (reused from pg_tools_wrapper pattern)
    "psycopg2-binary>=2.9",
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=1.8",
    # Config & utilities
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "tools*", "db*", "models*", "prompts*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
